<resources>
    <string name="app_name">MoodTracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Log-In</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_page">mainPageActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_mood_sqaures">MoodSqaures</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_data_visualisation">DataVisualisation</string>
    <string name="Wellness_toolbox">Welnes_toolbox</string>
    <string name="logs">logs</string>
    <string name="menu_stats">stats</string>
    <string name="menu_settings">menu_settings</string>
    <string name="NavSquares" />
    <string name="menu_moodSquares">Menu_moodSquares</string>
    <string name="square_colors">square colors</string>
    <string name="title_activity_love">LoveActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="love">Love</string>
    <string name="joy">Joy</string>
    <string name="surprise">Surprise</string>
    <string name="anger">Anger</string>
    <string name="sadness">Sadness</string>
    <string name="fear">Fear</string>
    <string name="enthralled">Enthralled</string>
    <string name="elated">Elated</string>
    <string name="enthusiastic">Enthusiastic</string>
    <string name="optimistic">Optimistic</string>
    <string name="proud">Proud</string>
    <string name="cheerful">Cheerful</string>
    <string name="happy">Happy</string>
    <string name="content">Content</string>

    <string name="stunned">Stunned</string>
    <string name="confused">Confused</string>
    <string name="amazed">Amazed</string>

    <string name="hostile">Hostile</string>
    <string name="hateful">Hateful</string>
    <string name="rageful">Rageful</string>
    <string name="exasperated">Exasperated</string>
    <string name="irritable">Irritable</string>
    <string name="envious">Envious</string>
    <string name="disgusted">Disgusted</string>
    <string name="scared">scared</string>
    <string name="terrorized">terrorized</string>
    <string name="insecure">insecure</string>
    <string name="nervous">nervous</string>
    <string name="horrified">horrified</string>


    <!--    Strings for the 2nd submenu of LOVE
        The outer ring on the mood circle

        -->
    <string name="relieved">Relieved</string>
    <string name="satisfied">Satisfied</string>

    <string name="compassionate">Compassionate</string>
    <string name="caring">Caring</string>

    <string name="infatuated">Infatuated</string>
    <string name="passion">Passion</string>

    <string name="attracted">Attracted</string>
    <string name="sentimental">Sentimental</string>

    <string name="fondness">Fondness</string>
    <string name="romantic">Romantic</string>


    <!--    Strings for the 2nd submenu of JOY
            The outer ring on the mood circle

            -->
    <string name="raptured">Raptured</string>
    <string name="enchanted">Enchanted</string>

    <string name="jubilation">Jubilation</string>
    <string name="euphoric">Caring</string>

    <string name="zealous">Zealous</string>
    <string name="excited">Excited</string>

    <string name="hopeful">Hopeful</string>
    <string name="eager">Eager</string>

    <string name="illustrious">Illustrious</string>
    <string name="triumphant">Triumphant</string>


    <string name="blissful">Blissful</string>
    <string name="jovial">Jovial</string>

    <string name="delighted">Delighted</string>
    <string name="amused">Amused</string>


    <string name="pleased">Pleased</string>
    <string name="overcome">overcome</string>
    <string name="moved">moved</string>


    <!--    Strings for Surprised/-->
    <string name="touched">Touched</string>
    <string name="stimulated">Stimulated</string>
    <string name="astounded">Astounded</string>
    <string name="speechless">Speechless</string>
    <string name="awe_struck">Awe-struck</string>
    <string name="astonished">Astonished</string>
    <string name="perplexed">Perplexed</string>
    <string name="disillusioned">Disillusioned</string>
    <string name="dismayed">Dismayed</string>
    <string name="shocked">Shocked</string>


    <!-- Sadness  -->
    <string name="powerless">Powerless</string>
    <string name="grief">Grief</string>

    <string name="lonely">Lonely</string>
    <string name="isolated">Isolated</string>

    <string name="guilty">Guilty</string>
    <string name="regretful">Regretful</string>

    <string name="displeased">Displeased</string>
    // Dismayed

    <string name="sorrow">Sorrow</string>
    <string name="depressed">Depressed</string>

    <string name="hurt">Hurt</string>
    <string name="agony">Agony</string>

    <!-- Anger-->
    <string name="revolt">Revolt</string>
    <string name="contempt">Contempt</string>

    <string name="jealous">Jealous</string>
    <string name="resentful">Resentful</string>

    <string name="aggravated">Aggravated</string>
    <string name="annoyed">Annoyed</string>

    <string name="frustrated">Frustrated</string>
    <string name="agitated">Agitated</string>

    <!--Fear-->
    <string name="dread">Dread</string>
    <string name="mortified">Mortified</string>

    <string name="anxious">Anxious</string>
    <string name="worried">Worried</string>

    <string name="inadequate">Inadequate</string>
    <string name="inferior">Inferior</string>

    <string name="hysterical">Hysterical</string>
    <string name="panic">Panic</string>

    <string name="helpless">Helpless</string>
    <string name="frightened">Frightened</string>

    <string name="chair">chair</string>
    <string name="breathing_exercise">Breathing Exercise</string>
    <string name="gratitude_journal">Gratitude Journal</string>


</resources>
