<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_wellness_toolbox"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Wellness_toolbox" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/logs" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_moodsqaures"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_moodSquares" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>
</menu>