<?xml version="1.0" encoding="utf-8"?>
<!-- ***************************************************************

    For questions about the code in this file ask
    File created by jhonatan


    ***************************************************************
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.JoyActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_enthralled_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"

            app:cardBackgroundColor="#00FFB2">


            <Button
                android:id="@+id/joy_enthralled_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/enthralled"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_elation_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00FF94">

            <Button
                android:id="@+id/joy_elation_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/elated"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_enthusiastic_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00FF66">

            <Button
                android:id="@+id/joy_enthusiastic_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/enthusiastic"
                android:textSize="36sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"

                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_optimistic_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00FF38">

            <Button
                android:id="@+id/joy_optimistic_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/optimistic"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_proud_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#70FF00">

            <Button
                android:id="@+id/joy_proud_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/proud"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_cheerful_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#9EFF00">

            <Button
                android:id="@+id/joy_cheerful_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/cheerful"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_happy_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#BDFF00">

            <Button
                android:id="@+id/joy_happy_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/happy"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_content_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#DBFF00">

            <Button
                android:id="@+id/joy_content_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/content"
                android:textSize="36sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>