<?xml version="1.0" encoding="utf-8"?>
<!-- ***************************************************************

    For questions about the code in this file ask
    File created by jhonatan


    ***************************************************************
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fear">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/fear_horror_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"

            app:cardBackgroundColor="#fa83dd">

            <Button
                android:id="@+id/fear_horror_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/horrified"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fear_nervous_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f985c6">

            <Button
                android:id="@+id/fear_nervous_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/nervous"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fear_insecure_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f985c6">

            <Button
                android:id="@+id/fear_insecure_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/insecure"
                android:textSize="36sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"

                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fear_terror_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#ff94ba">

            <Button
                android:id="@+id/fear_terror_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/terrorized"
                android:textSize="38sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fear_scared_menu2"
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#fda8ae">

            <Button
                android:id="@+id/sadness_scared_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/scared"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                />
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>