<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurpriseActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_enthralled_menu2"
            android:layout_width="match_parent"
            android:layout_height="145dp"

            app:cardBackgroundColor="#0073FF">


            <Button
                android:id="@+id/joy_enthralled_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:text="@string/stunned"
                android:textSize="42sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_elation_menu2"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            app:cardBackgroundColor="#0099FF">

            <Button
                android:id="@+id/joy_elation_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:text="@string/confused"
                android:textSize="42sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_enthusiastic_menu2"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            app:cardBackgroundColor="#00E1FF">

            <Button
                android:id="@+id/joy_enthusiastic_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:text="@string/amazed"
                android:textSize="36sp"
                android:textStyle="bold"

                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_optimistic_menu2"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            app:cardBackgroundColor="#00FFF7">

            <Button
                android:id="@+id/love_longing_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:text="@string/confused"
                android:textSize="42sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/joy_proud_menu2"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            app:cardBackgroundColor="#00FFB2">

            <Button
                android:id="@+id/joy_proud_textView_menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:text="@string/stuned"
                android:textSize="42sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>